# cmake_basic

./: CMakeLists.txt  demo.cxx
